chore: cleanup project, remove mobile, metrics, unify env and docs
- fix(monitoring): loki-config.yml discover_service_name list and compactor delete_request_store
- chore(frontend): remove mobile app frontend/mobile-okututor (145 files), unify .env to single .env + .env.example, remove .env.development/.env.production
- chore(monitoring): remove legacy metrics/ and backend/metrics (Tempo/Alloy), migrate keys to monitoring/.env.example
- chore(backend): remove duplicate backend/prod-config, backend/docs legacy files, clean .idea/frontend/dist/backend/target
- docs: consolidate all docs to backend/docs (canonical) + docs mirror, add backend/docs/README, sync monitoring/README, update DEPLOYMENT/ARCHITECTURE/RUNBOOK/ops/README
- chore(env): unify to one .env per service (backend/frontend/monitoring) gitignored + .env.example, migrate keys without deletion
- ci: update .github/workflows/backend.yml metrics->monitoring path